# Lunex-v1.1

./: .doppler.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GENESIS_LIQUIDITY_GUIDE.md  LISTING_POLICY.md  PRODUCTION-READINESS.md  README.md  SDK_COMPLETE_SUMMARY.md  TESTNET_FAUCET_GUIDE.md  deployment-testnet-1773537062184.json  docker-compose.dev.yml  ecosystem.config.js  llms.txt  package.json  rust-toolchain.toml  tsconfig.json
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  contracts.yml  deploy.yml  fuzz.yml  manual-fuzz-security.yml  pr-check.yml  pr-checks.yaml  prelaunch-security.yml  release.yml  security-audit.yml
.windsurf/workflows/: deploy-listing.md  fuzz-security.md  pre-launch-security-review.md  social-analytics-pipeline.md
Lunex/contracts/asymmetric_pair/: Cargo.toml  lib.rs
Lunex/contracts/asymmetric_pair/fuzz/: Cargo.toml
Lunex/contracts/asymmetric_pair/fuzz/fuzz_targets/: invariant_math.rs
Lunex/contracts/copy_vault/fuzz/: Cargo.toml
Lunex/contracts/copy_vault/fuzz/fuzz_targets/: fuzz_vault.rs
Lunex/contracts/factory/: Cargo.toml  lib.rs
Lunex/contracts/liquidity_lock/: Cargo.toml
Lunex/contracts/liquidity_lock/src/: lib.rs
Lunex/contracts/pair/: Cargo.toml  lib.rs
Lunex/contracts/rewards/: Cargo.toml  lib.rs
Lunex/contracts/spot_settlement/: Cargo.toml  lib.rs
PATHFINDER-2026-04-28/: 00-features.md  PRODUCAO-RELATORIO.md
deployment/: listing-deploy-1773152769150.json  remaining-deploy-1773552883202.json
docker/: .env.docker.example  .env.prod.example  .env.sandbox.example  .env.testnet.example  Dockerfile.admin  Dockerfile.api  Dockerfile.frontend  alert-rules.yml  alertmanager.yml  backup.sh  blackbox-exporter.yml  docker-compose.doppler.yml  docker-compose.prod.yml  docker-compose.sandbox.yml  docker-compose.testnet.yml  loki-config.yml  nginx.dev.conf  nginx.prod.conf  nginx.spa.conf  nginx.testnet.conf  prometheus.yml
docs/: API.md  API_SPECIFICATION.md  ARCHITECTURE.md  CHANGELOG_SDK_DECIMALS.md  DEPARA_ARCHITECTURE.md  DEPLOYMENT.md  FRONTEND_IMPLEMENTATION_GUIDE.md  FUZZ_AND_INVARIANT_TESTING_PLAN.md  LOCAL_TESTNET_DEPLOY.md  LUNEX_DEX_FEATURES.md  PRD_LUNES_NATIVE_ASSETS.md  PRELAUNCH_SECURITY_REVIEW_TEMPLATE.md  PUBLIC_API_SPECIFICATION.md  README.md  REFACTORING_PLAN.md  RESUMO_COMPLETO_LUNEX_DEX.md  SISTEMA_HIBRIDO_LISTAGEM_COMPLETO.md  SPOT_ORDERBOOK_ARCHITECTURE.md  WLUNES_REQUIREMENTS.md  dex-requisitos.md  requisitonovo.md
docs/api/: lunex-sdk.ts  openapi.json
docs/features/: README.md
docs/guides/: ALTERNATIVE_TESTNET_GUIDE.md  DECIMAL_HANDLING_GUIDE.md  GENESIS_LIQUIDITY_GUIDE.md  README_DEPLOY_LUNES.md  SDK_FRONTEND_GUIDE.md  TESTNET_DEPLOYMENT_GUIDE.md
docs/prd/: PROJECT_PRD.md
docs/reports/: AUDITORIA_GOVERNANCA_TAXAS.md  COMPLETE_TECHNICAL_ANALYSIS.md  INVESTOR_REPORT_2025.md  QA_REPORT_FINAL_2026-03-12.md  RELATORIO_FINAL_OTIMIZACAO_GAS_SEGURANCA.md  SDD_OPERATION_READINESS_2026-04-14.md  SECURITY_AUDIT_REPORT_INK_4_2_1.md  SECURITY_ROADMAP_2_0.md  TDD_INCOMPLETE_LOGIC_ANALYSIS.md  TOKEN_LISTING_TECHNICAL_ANALYSIS.md  backend-auth-attack-simulation-2026-03-09.md  manual-fuzz-security-2026-03-09.md
docs/sdd/: README.md
docs/specs/: LOCAL_PROJECT_BOOTSTRAP_SPEC.md  PROJECT_SPEC.md
docs/spot/: copytrade-arquitetura.md
examples/: decimal-utilities-example.ts
faucet/: Dockerfile  index.js  package.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: copy_vault_accounting.rs  pair_invariant.rs  spot_settlement_replay.rs
lunes-dex-main/: .dockerignore  .env.example  .env.production.example  .eslintrc.cjs  .eslintrc.js  README.md  index.html  nginx.spa.conf  package.json  test-debug.js  test-pointer.js  test-radius.js  test-script.js  test.js  tsconfig.json  vite.config.ts
lunes-dex-main/public/: index.html
lunes-dex-main/scripts/: check-contract-abi-alignment.cjs  check-depcheck.cjs  check-ts-prune.cjs
lunes-dex-main/src/: App.tsx  index.tsx
mcp/lunex-agent-mcp/: .env.example  .eslintrc.cjs  OPENCLAW_SESSION_EXAMPLE.md  README.md  openclaw.mcp.json  package.json
scripts/: admin-list-token.ts  check_balances.ts  check_balances2.ts  check_contracts.ts  debug_contracts.ts  debug_token.ts  deploy-asset-wrappers.ts  deploy-listing-contracts.ts  deploy-lunes.ts  deploy-remaining-contracts.ts  deploy.sh  discover_tokens.ts  explore-lunes-pallets.js  explore-lunes-rpc.js  fund_tester.ts  gen-secrets.sh  list-lunes-methods.js  list-token.ts  listing-relayer.ts  provision-vps.sh  send_tokens.ts  setup-doppler.sh  setup-vps.sh  verify-deployment.ts
scripts/security/: run_security_suite.sh  sentinel_bot.ts
sdk/: .eslintrc.cjs  .gitignore  README.md  jest.config.js  package.json  tsconfig.json
sdk/examples/: simple-swap.ts
sdk/src/: http-client.ts  index.ts  spot-types.ts  spot-utils.ts  types.ts  utils.ts  websocket-client.ts
spot-api/: .dockerignore  .env.example  .eslintrc.cjs  README.md  deployed-addresses.json  jest.config.js  package.json  prisma.config.ts
spot-api/__tests__/: affiliate.test.ts  agent.e2e.test.ts  botSandbox.test.ts  governance.e2e.test.ts  tradeApi.e2e.test.ts
spot-api/abis/: Factory.json
spot-api/prisma/: schema.prisma  seed.ts
spot-api/scripts/: check-contracts-qa.ts  check-depcheck.cjs  check-ts-prune.cjs  deploy-additional-tokens.ts  deploy-contracts.ts  deploy-tokens.ts  generate-social-analytics-activity.ts  opcheck-asymmetric.ts  qa-api.ts  qa-blockchain.ts  qa-security.ts  seedTokens.ts  setup-local-tokens.ts  simulate-all-modules.ts  simulate-volume.ts  (+1 more)
src/: decimal_utils.rs  lib.rs  native_assets_integration.rs
subquery-node/: .gitignore  README.md  entrypoint.sh  package.json  project.template.yaml  project.yaml  schema.graphql  tsconfig.json
tasks/: IMPLEMENTACAO-100.md  IMPLEMENTACAO-2026-04-28.md  IMPLEMENTACAO-FASES-4-5.md  IMPLEMENTACAO-TIER2-3.md  plan.md  todo.md
tests/: complete_staking_rewards_integration.rs  e2e_flow_simulation.rs  openzeppelin_security_validation.rs  property_security_invariants.rs  security_tests.rs  usability_native_psp22_tests.rs
(+366 files in other folders)
