[workspace]
resolver = "2"
members = [
    ".",
    "Lunex/contracts/asset_wrapper",
    "Lunex/contracts/asymmetric_pair",
    "Lunex/contracts/copy_vault",
    "Lunex/contracts/factory",
    "Lunex/contracts/liquidity_lock",
    "Lunex/contracts/listing_manager",
    "Lunex/contracts/pair",
    "Lunex/contracts/psp22",
    "Lunex/contracts/rewards",
    "Lunex/contracts/router",
    "Lunex/contracts/spot_settlement",
    "Lunex/contracts/staking",
    "Lunex/contracts/wnative",
]

[package]
name = "lunex-sim-tests"
version = "0.1.0"
edition = "2021"



[profile.dev]
lto = false

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
