[package]
name = "lunex-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[[bin]]
name = "pair_invariant"
path = "fuzz_targets/pair_invariant.rs"
test = false
doc = false
bench = false

[[bin]]
name = "copy_vault_accounting"
path = "fuzz_targets/copy_vault_accounting.rs"
test = false
doc = false
bench = false

[[bin]]
name = "spot_settlement_replay"
path = "fuzz_targets/spot_settlement_replay.rs"
test = false
doc = false
bench = false

[workspace]
members = []
