[package]
name = "spot_settlement_contract"
version = "0.1.0"
authors = ["Lunes Platform"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[lib]
name = "spot_settlement_contract"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []
